--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "description": "The parser for the handlebars-language (work in progress)",
   "main": "build/parser.js",
   "typings": "build/parser.d.ts",
-  "dependencies": {},
+  "dependencies": {
+    "@types/fs-extra": "^8.0.1"
+  },
   "devDependencies": {
+    "@types/glob": "^7.1.1",
     "@types/jest": "^24.0.20",
+    "@types/js-yaml": "^3.12.1",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
+    "ajv": "^6.10.2",
     "concurrently": "^5.0.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
-    "handlebars": "^4.5.1",
+    "fs-extra": "^8.1.0",
+    "glob": "^7.1.6",
+    "handlebars": "^4.5.3",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
+    "js-yaml": "^3.13.1",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "ts-jest": "^24.1.0",
