test: add more spec files

--- a/parser-specification/test-cases/path-expressions/literal-number.yaml
+++ b/parser-specification/test-cases/path-expressions/literal-number.yaml
@@ -1,4 +1,5 @@
-description: "Partial call"
+description: |
+    A path expression can be a single number-literal.
 template: "{{1}}"
 expectedAst:
     type: Program
