--- a/parser-specification/test-cases/path-expressions/multiple-segments/separated-by-dots-and-slashes.yaml
+++ b/parser-specification/test-cases/path-expressions/multiple-segments/separated-by-dots-and-slashes.yaml
@@ -1,5 +1,6 @@
-description: Partial call
-template: "{{> test}}"
+description: |
+    A single dot
+template: "{{a.b/c.d}}"
 expectedAst:
     type: Program
     loc:
@@ -8,35 +9,38 @@ expectedAst:
             column: 0
         end:
             line: 1
-            column: 10
+            column: 11
         source: test.hbs
     body:
-        - type: PartialStatement
+        - type: MustacheStatement
           loc:
               start:
                   line: 1
                   column: 0
               end:
                   line: 1
-                  column: 10
+                  column: 11
               source: test.hbs
-          indent: ""
-          name:
+          escaped: true
+          params: []
+          path:
               type: PathExpression
               loc:
                   start:
                       line: 1
-                      column: 4
+                      column: 2
                   end:
                       line: 1
-                      column: 8
+                      column: 9
                   source: test.hbs
               data: false
               depth: 0
-              original: test
+              original: a.b/c.d
               parts:
-                  - test
-          params: []
+                  - a
+                  - b
+                  - c
+                  - d
           strip:
               close: false
               open: false
